Update the  ChatPromptTemplate

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlZLAVoBPNR7QfRCrs+SUM",
+      "authorship_tag": "ABX9TyPsZTWlOXPQBWTbcjeaUAzO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,6 +213,7 @@
         "prompt=ChatPromptTemplate.from_messages(\n",
         "    [\n",
         "        SystemMessage(content=\"Hello. Please answere the following question\"),\n",
+        "        AIMessage(content=\"Hello, nice to meet you!, How can I assist today\"),\n",
         "        (\"user\", \"{question}\")\n",
         "    ]\n",
         ")"
@@ -220,7 +221,7 @@
       "metadata": {
         "id": "34zu07cYeZ5o"
       },
-      "execution_count": 62,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -244,7 +245,7 @@
       "metadata": {
         "id": "ZCCbufSuf0cx"
       },
-      "execution_count": 64,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -266,7 +267,7 @@
       "metadata": {
         "id": "UHaDfId0l8rg"
       },
-      "execution_count": 66,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -283,29 +284,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nuw0rD3cmDM0",
-        "outputId": "3b85dcc3-2d24-4d9f-eeaf-86b02e17ed0e"
+        "outputId": "fecefcbe-2fdb-4665-9cbc-e965c01ac21a"
       },
-      "execution_count": 71,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "System: Hello. Please answere the following question\n",
+            "AI: Hello, nice to meet you!, How can I assist today\n",
             "Human: Waht is the diffrent between Generative AI and Deep Learning?\n",
-            "System: Generative AI refers to a type of artificial intelligence that can generate new content, such as images or text, based on existing data. It uses machine learning algorithms to analyze patterns in the data and then use those patterns to create something new. On the other hand, deep learning is a subset of machine learning that focuses on using neural networks to learn from large amounts of data. Neural networks are inspired by how the human brain works and consist of layers of interconnected nodes that process information. In deep learning, these networks are trained on vast datasets to recognize patterns and make predictions. While generative AI and deep learning both involve training models with data, they have different goals and approaches. Generative AI aims to produce original content, while deep learning focuses on making accurate predictions or classifications. Both technologies have been used for various applications, including image recognition, natural language processing, and speech recognition. However, their specific strengths and limitations depend on the task at hand. For example, generative AI may be better suited for tasks like generating creative ideas or writing stories, while deep learning might excel at more structured problems like identifying objects in an image or translating languages. Overall, understanding the differences between generative AI and deep learning can help you choose the right technology for your project's needs.\n"
+            "AI: Generative AI refers to a type of artificial intelligence that generates new content based on existing data or models. It uses algorithms to create output that resembles human-generated content in terms of style, form, or function. Examples include text generation (e.g., chatbots), image synthesis (e.g., deepfakes), music composition, and video editing. On the other hand, deep learning is a subset of machine learning that focuses on training neural networks with multiple layers to learn complex patterns from large datasets. These networks are capable of making predictions or classifications based on input data without explicit programming instructions. While generative AI often relies on deep learning techniques for its operations, it goes beyond simple pattern recognition by generating entirely novel outputs rather than just predicting outcomes based on known inputs.\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "UZuS3iH02Ehx"
-      },
-      "execution_count": 67,
-      "outputs": []
     },
     {
       "cell_type": "code",
