Update the .HDF5 file

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsZTWlOXPQBWTbcjeaUAzO",
+      "authorship_tag": "ABX9TyM4vnsTgBASv9KH8HCXxXND",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 82,
       "metadata": {
         "id": "ZspPxXypYAM0"
       },
@@ -55,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hmHREYNFYIeB",
-        "outputId": "f4df56c6-bd46-430a-8a81-0318357a69a8"
+        "outputId": "6cc2cacb-8677-442a-9c74-2637fbde687f"
       },
-      "execution_count": 58,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "b0j0FFTQYQQ4"
       },
-      "execution_count": 59,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
       "metadata": {
         "id": "6JQ0f3hYZ7Mi"
       },
-      "execution_count": 60,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "XCA3e-SVaL3A"
       },
-      "execution_count": 61,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -221,7 +221,7 @@
       "metadata": {
         "id": "34zu07cYeZ5o"
       },
-      "execution_count": 73,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -232,7 +232,7 @@
       "metadata": {
         "id": "74fBkN8qe8kZ"
       },
-      "execution_count": 63,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "ZCCbufSuf0cx"
       },
-      "execution_count": 74,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "PHYRBNB4gMaw"
       },
-      "execution_count": 65,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -267,7 +267,7 @@
       "metadata": {
         "id": "UHaDfId0l8rg"
       },
-      "execution_count": 75,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -284,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nuw0rD3cmDM0",
-        "outputId": "fecefcbe-2fdb-4665-9cbc-e965c01ac21a"
+        "outputId": "23b26506-4bd2-4f17-e461-1c3280de88ac"
       },
-      "execution_count": 79,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +295,7 @@
             "System: Hello. Please answere the following question\n",
             "AI: Hello, nice to meet you!, How can I assist today\n",
             "Human: Waht is the diffrent between Generative AI and Deep Learning?\n",
-            "AI: Generative AI refers to a type of artificial intelligence that generates new content based on existing data or models. It uses algorithms to create output that resembles human-generated content in terms of style, form, or function. Examples include text generation (e.g., chatbots), image synthesis (e.g., deepfakes), music composition, and video editing. On the other hand, deep learning is a subset of machine learning that focuses on training neural networks with multiple layers to learn complex patterns from large datasets. These networks are capable of making predictions or classifications based on input data without explicit programming instructions. While generative AI often relies on deep learning techniques for its operations, it goes beyond simple pattern recognition by generating entirely novel outputs rather than just predicting outcomes based on known inputs.\n"
+            "System: Generative AI refers to a type of artificial intelligence that generates new content based on existing data or models. It uses algorithms to create original output such as images, text, music, or videos. On the other hand, deep learning is a subset of machine learning that focuses on training neural networks with multiple layers to learn complex patterns in data. While generative AI can be used for tasks like image generation or language modeling, deep learning is more commonly applied to problems involving classification, regression, and prediction. Both technologies have their own strengths and weaknesses depending on the specific task at hand.\n"
           ]
         }
       ]
@@ -308,7 +308,7 @@
       "metadata": {
         "id": "H-Tg4ju7mwJT"
       },
-      "execution_count": 68,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -316,12 +316,12 @@
       "source": [
         "import pickle\n",
         "\n",
-        "pickle.dump(chain, open('./LLMModel.h5', 'wb'))"
+        "pickle.dump(llm, open('./LLMModel.h5', 'wb'))"
       ],
       "metadata": {
         "id": "BezDc1cVu2e-"
       },
-      "execution_count": 69,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -330,7 +330,7 @@
       "metadata": {
         "id": "2HVS6iJxvMbO"
       },
-      "execution_count": 69,
+      "execution_count": 94,
       "outputs": []
     }
   ]
