Update the comments

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgvFjrmxOJox7krPdHzC97",
+      "authorship_tag": "ABX9TyNn10R9p03Os3EEqX4s8f5f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,6 +175,7 @@
         "        \"repetition_penalty\": 1.2,\n",
         "        \"stop_sequence\": [\"\\n\"]\n",
         "    },\n",
+        "    ## please create your own hugging face account and create your own api token. Below one is my api token.It doesnt work for you\n",
         "    huggingfacehub_api_token=\"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\"\n",
         ")"
       ],
