Update the comments

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNn10R9p03Os3EEqX4s8f5f",
+      "authorship_tag": "ABX9TyMcmqit6Ozq1N3qBCUwgyFG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,17 @@
       "metadata": {
         "id": "fOdFE7R3YF8X"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Install the necessary libraries"
+      ],
+      "metadata": {
+        "id": "nKTllI1tAA4h"
+      },
+      "execution_count": 96,
+      "outputs": []
     },
     {
       "cell_type": "code",
