Update the file and install library

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -164,7 +164,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "<ipython-input-4-7f536d93a6a6>:3: LangChainDeprecationWarning: The class `HuggingFaceHub` was deprecated in LangChain 0.0.21 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEndpoint``.\n",
+            "C:\\Users\\THIS PC\\AppData\\Local\\Temp\\ipykernel_59204\\3008923203.py:3: LangChainDeprecationWarning: The class `HuggingFaceHub` was deprecated in LangChain 0.0.21 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEndpoint``.\n",
             "  llm = HuggingFaceHub(\n"
           ]
         }
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "id": "34zu07cYeZ5o"
       },
@@ -229,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 4,
       "metadata": {
         "id": "ZCCbufSuf0cx"
       },
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {
         "id": "UHaDfId0l8rg"
       },
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -279,12 +279,12 @@
           "text": [
             "System: Hello. Please answere the following question\n",
             "AI: Hello, nice to meet you!, How can I assist today\n",
-            "Human: Please provide the essay regarding the Dr Abdul Kalam's life and his achievements\n",
-            "AI: Sure, here is a brief summary of Dr APJ Abdul Kalam’s life and accomplishments:\n",
-            "Dr APJ Abdul Kalam was born on October 15th, 1931 in Rameswaram, India. He grew up in a poor family but had an insatiable curiosity for science and technology from a young age. After completing his education at St Joseph’s College in Tiruchirappalli, he joined the Indian Defense Research & Development Organization (DRDO) as a scientist.\n",
-            "In 1962, during the Indo-China war, he worked with DRDO to develop missile systems that could be used by the Indian Army against Chinese forces. His work led him to become one of the key figures behind India’s successful development of nuclear weapons capabilities. In addition to this role within defense research, he also served as Director General of Aeronautical Systems Development Establishment (ASDE), where he helped design aircraft such as Tejas Light Combat Aircraft (LCA).\n",
-            "After retiring from government service in 1984, Dr Kalam continued working towards advancing scientific knowledge through various projects including developing low cost satellites for space exploration purposes; establishing educational institutions like Sathyabama University which focuses on providing quality higher education opportunities especially among underprivileged sections of society; writing books about leadership principles etc., all while maintaining close ties with students across different parts of India who looked up to him as their mentor/guide/role model/inspiration throughout their lives .\n",
-            "Overall , it would not be wrong if we say that Dr APJ Abdul Kalam has left behind an indelible mark on our country due to his immense contributions both professionally & personally towards making us proud citizens worldwide !\n"
+            "Human: Please provide the essay regarding the Dr Abdul Kalam's life and his contribution in India\n",
+            "AI: Sure, here is a brief summary of Dr APJ Abdul Kalam's life and contributions:\n",
+            "Dr APJ Abdul Kalam was born on October 15th, 1931 in Rameswaram, Tamil Nadu. He completed his education at St Joseph's College, Trichy and Madras Institute of Technology (MIT), Chennai. After completing his studies, he joined the Defense Research and Development Organization (DRDO) as a scientist and worked there for several years before joining Indian Space Research Organisation (ISRO).\n",
+            "He played a key role in developing India's first satellite launch vehicle (SLV-III) which successfully launched Rohini Satellite into orbit in July 1980. Later he also led ISRO team that developed Polar Satellite Launch Vehicle (PSLV) which has been used to launch many satellites including INSAT series of communication satellites.\n",
+            "In addition to his work with ISRO, Dr Kalam served as Chief Scientific Adviser to Government of India from 1992 until 1999 when he became President of India serving two terms between 2002 - 2007. During this time period he focused heavily on promoting science & technology among young people through various initiatives such as \"What Can I Give?\" campaign aimed at encouraging students towards social service activities instead just focusing solely academic achievements; \"Ignited Minds\" program designed specifically targeting rural areas where accessibility issues exist due lack infrastructure development etc.; \"Make In India\" initiative aimed at boosting manufacturing sector within country by providing incentives like tax breaks etc..\n",
+            "Overall Dr APJ Abdul Kalam made significant contributions both technologically speaking but also socially too making him one most respected figures not only amongst Indians but worldwide community alike thanks largely due efforts put forth during tenure presidency office holder position held highest level government post available country today .\n"
           ]
         }
       ],
